Fix: overflow-x hidden not working on mobile

--- a/scss/home--mobile.scss
+++ b/scss/home--mobile.scss
@@ -5,6 +5,10 @@ html {
 body {
     min-height: 100vh;
     background-color: #EDF3F8;
+}
+
+.site-wrapper {
+    position: relative;
     overflow-x: hidden;
 }
 
